# src/routes/category/addItem.route.ts
@@ -1,18 +1,18 @@
-import { Router } from 'express';
-import addCategoryController from '../../controllers/category/addCategory.controller';
+// import { Router } from 'express';
+// import addCategoryController from '../../controllers/category/category.controller';
 
-class AddCategoryRouter {
-    public router: Router = Router();
-    private categoryController : addCategoryController = new addCategoryController();
+// class AddCategoryRouter {
+//     public router: Router = Router();
+//     private categoryController : addCategoryController = new addCategoryController();
 
-    constructor(){
-        this.initializeRouter();
-    }
+//     constructor(){
+//         this.initializeRouter();
+//     }
 
-    private initializeRouter(): void{
-        this.router.post('/addItem', this.categoryController.addCategoryItem);
-        this.router.get('/allItems', this.categoryController.allItems);
-    }
-}
+//     private initializeRouter(): void{
+//         this.router.post('/addItem', this.categoryController.addCategoryItem);
+//         this.router.get('/allItems', this.categoryController.allItems);
+//     }
+// }
 
-export default AddCategoryRouter;
+// export default AddCategoryRouter;
